client/src/index.css
/* ... */
.overlay-bg {
    position: fixed;
    background-color: rgba(0, 0, 0, 0.75);
    width: 100%;
    height: 100%;
    z-index: 500;
}

.sidebar-grid {
    display: grid;
    grid-template-columns: 1fr;
    gap: 10px;
    align-items: start;
    justify-items: center;
    width: 75%;
    margin: 20px auto;
    /* height: calc(100vh - 127px); */
    min-height: calc(100vh - 127px);
    min-height: calc(100dvh - 127px);
    grid-auto-rows: 60px 60px 60px 60px 60px 1fr;
}

.sidebar-flex-container {
    display: flex;
    width: 100%;
    max-width: 300px;
    align-items: center;
    gap: 20px;
    transition: .2s;
    padding: 10px 20px;
    border-radius: 10px;
    text-decoration: none;
    color: rgba(255, 255, 255, 0.8);
    cursor: pointer;
    font-size: 25px;
    font-weight: 700;
    letter-spacing: 1.1px;
    word-break:normal;
}

.sidebar-flex-container.active {
    background-color: #ffffff4b;
    color: white;
}

.sidebar-flex-container:hover {
    background-color: #ffffff4b;
    color: white;
}

.sidebar-flex-container .sidebar-icons {
    font-size: 40px;
    color: white;
    font-variation-settings: 'FILL' 0, 'wght' 200, 'GRAD' 0, 'opsz' 24;
}

/* TODO */
.todos-container {
display: grid;
max-width: 1000px;
grid-template-columns: 1fr 1fr;
gap: 20px;
margin: 30px auto;
justify-items: center;
}

.single-todo-container {
    background: rgb(255, 255, 255);
    /* width: clamp(100px, 100%, 800px); */
    width: 100%;
    padding: 20px 50px 20px 20px;
    border-radius: 10px;
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
    position: relative;
    border-bottom: 2px solid transparent;
    word-break: break-word;
    overflow-wrap: break-word;
}

#close {
    color: rgb(255, 0, 0);
    position: absolute;
    top: 10px;
    right: 10px;
}

.single-todo-container .date {
    color: rgb(197, 197, 197);
    font-size: 14px;
    font-style: italic;
    font-weight: 300;
    padding-top: 20px;
    margin: auto 0 0 0;
}

.inner-flex-single-todo {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.single-todo-container.todo-active {
    border-bottom: 2px solid var(--primary-color);
}

.icons-container {
   position: absolute;
   bottom: 10px;
   right: 6px;
}

.icons-container .checkmark {
    cursor: pointer;
    user-select: none;
    font-size: 30px;
}

/* Todo/Login/Register FORMS */ 
.login-maskott-img {
    width: clamp(100px, 40%, 200px);
    margin: auto;
}

/* LOGIN & REGISTER FORMS */
.login-register-padding {
    padding: 0 30px;
}

.fancy-form {
    padding: 20px 60px 20px 60px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    background-color: white;
    margin: 30px auto;
    /* width: clamp(300px, 60%, 800px); */
    max-width: 500px;
    gap: 25px;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
}

.fancy-form-title {
    text-align: center;
    font-weight: 700;
    font-size: 30px;
    color: var(--primary-color);
}

.fancy-input-container {
    position: relative;
    display: flex;
    align-items: center;
}

.fancy-form input {
    width: 100%;
    padding: 10px 15px;
    border: 1px solid rgb(136, 136, 136);
    background-color: white;
    font-size: 16px;
    font-weight: 400;
    transition: 300ms ease;
    border-radius: 5px;
}

.fancy-form input:focus {
    outline: none;
    border-color: var(--primary-color);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.fancy-form input:hover {
    border: 1px solid var(--primary-color);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.fancy-form label {
    position: absolute;
    display: flex;
    align-items: center;
    height: 50%;
    left: 10px;
    padding: 0 5px;
    transition: 300ms ease;
    pointer-events: none;
    font-size: 16px;
}

.fancy-input-container input:focus + label, 
.fancy-input-container input:valid + label {
    transform: translateY(-100%);
    color: var(--primary-color);
    font-size: 14px;
    background-color: white;
}

.fancy-form button {
    width: 100%;
    border-radius: 30px;
    border: 2px solid transparent;
    padding: 10px;
    font-weight: 500;
    letter-spacing: 1px;
    font-size: 16px;
    color: rgb(255, 255, 255);
    background: var(--primary-color);
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
    cursor: pointer;
    outline: none;
    transition: box-shadow .2s ease, background-color .2s ease, filter .2s ease;
}

.fancy-form button:hover {
    box-shadow: rgba(0, 0, 0, 0.15) 0px 8px 10px;
    filter: brightness(1.1);
}

.fancy-form button:focus {
    border: 2px solid black;
}

.login-container {
    width: clamp(25%, 500px, 90%);
    margin: auto;
    background: white;
    padding: 20px 40px;
    border-radius: 10px;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
}

form.add-todo-form,
form.register-form,
form.login-form {
    width: clamp(50%, 400px, 90%);
    margin: 0 auto;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

form.add-todo-form input,
form.add-todo-form textarea,
form.register-form input,
form.login-form input {
    padding: 15px;
    border: 1px solid rgb(102, 102, 102);
    border-radius: 2px;
}

form.add-todo-form input:hover,
form.add-todo-form textarea:hover,
form.register-form input:hover,
form.login-form input:hover {
background-color: rgb(224, 224, 224);
}

form.add-todo-form label,
form.register-form label,
form.login-form label {
    margin-top: 10px;
    color:rgb(70, 70, 70)
}
/* ... */

